--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Leimer Lorenzo",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "pokedex-promise-v2": "^3.3.0"
   }
 }
